# InterviewsAlgoCourse

./: README.md
Task1/: 1week.cpp
array/: CMakeLists.txt  README.md  array.cpp  array.h  array_tests.cpp
dynamicprog/: CMakeLists.txt  README.md  dynamic.cpp  dynamic.h  dynamic_tests.cpp
heap/: CMakeLists.txt  README.md  heap.cpp  heap.h  heap_tests.cpp
list/: CMakeLists.txt  README.md  list.cpp  list.h  list_tests.cpp
search/: CMakeLists.txt  README.md  search.cpp  search.h  search_tests.cpp
sort/: CMakeLists.txt  README.md  sort.cpp  sort.h  sort_tests.cpp
tree/: CMakeLists.txt  README.md  tree.cpp  tree.h  tree_tests.cpp
